--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
+    "socket.io-client": "^4.0.2",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
